
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct hostent {int h_length; int h_addr; } ;


 int exit (int) ;
 int fprintf (int ,char*) ;
 struct hostent* gethostbyname (char*) ;
 long inet_addr (char*) ;
 int memcpy (long*,int ,int ) ;
 int stderr ;

long get_host_ip(char *hname)
 {
  long ip_add;
  struct hostent *h;
   if((ip_add = inet_addr(hname)) < 0)
    {
     h = gethostbyname(hname);
      if(h == ((void*)0))
        {
         fprintf(stderr,"[-]Can not resolve IP address\n");
         exit(1);
        }
      memcpy(&ip_add,h->h_addr,h->h_length);
    }
   return(ip_add);
 }
